# webserv

./: .gitignore  CMakeLists.txt  Listener.cpp  Listener.hpp  Makefile  README.md  Server.cpp  Server.hpp  ServerListener.cpp  ServerListener_HandleRequests.cpp  ServerListener_HandleResponses.cpp  USEFULL  USEFULL_INFO.md  WEBSERV.CONF  WEBSERV_GDRAKE_LINUX.CONF  WEBSERV_GDRAKE_VERSION.CONF  WEBSERV_THAT_PASSED_TEST.CONF  WebServ.cpp  WebServ.hpp  WebServ_Router.cpp  WebServ_charset.cpp  main.cpp  one23.txt  telnet_test.sh  temp  test_autoindex.html  utils.cpp  utils.hpp
base64_coding/: Base64.cpp  Base64.hpp  base64.cpp  base64.hpp  htpasswd  main.cpp  parser_log_pass.cpp  passwd
config_parsing/: AContext.hpp  ADirective.hpp  Config.cpp  Config.hpp  HttpContext.hpp  LocationContext.cpp  LocationContext.hpp  MainContext.hpp  ServerContext.cpp  ServerContext.hpp  tests  tests.hpp
config_parsing/ft_libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
config_parsing/ft_server/: Dockerfile
config_parsing/ft_server/srcs/: main_init_script.sh  restart_main_services.sh  webserv.conf
config_parsing/test_configs/: 1.conf  2.conf  CMakeLists.txt  Makefile  fixtures.cpp  fixtures.hpp  tmp_config.conf
config_parsing/test_configs/contexts/: test_location.cpp
config_parsing/test_configs/directives/: test_alias.cpp  test_autoindex.cpp  test_client_max_body_size.cpp  test_error_page.cpp  test_index.cpp  test_limit_except.cpp  test_listen.cpp  test_root.cpp  test_server_name.cpp
config_parsing/test_configs/directives/tmp_configs/: min_max_values_neg_1.conf
configs/: limit_the_client_body.conf  multiple_servers_with_different_port.conf  multiple_servers_with_different_server_name.conf
core/: Listener.cpp  Listener.hpp  Server.cpp  Server.hpp  WebServ.cpp  WebServ.hpp  WebServ_Router.cpp
core/Request/: Request.cpp  Request.hpp
core/Response/: Response.cpp  Response.hpp
core/Response/autoindex_handling/: autoindex_handling.hpp
default_folder/: 1.txt  index.html
default_folder/html/: 1.txt  file.t  file_for_8080_port.html  file_for_8081_port.html  file_for_8085_port.html  file_name_example.txt  file_name_nginx.txt  file_name_ok.txt  hello_world_lang_en-US.html  hello_world_lang_taaa.html  hello_world_lang_tt.html  index.html  test_folder
default_folder/html/234/: 1.txt  345.txt
default_folder/html/234/345 6/: t t.txt
default_folder/html/YoupiBanane/nop/: youpi.bad_extension
default_folder/html/error_pages/: 404.html  error.txt
default_folder/html/ht/: 1.txt
default_folder/html/newdir/: file.txt  hello.php
default_folder/html/put_test/: file_should_exist_after
engine_tests/: test_servers.cpp
example_configs/: WEBSERV.CONF
nginx_etalon/html/: index.html  youpi.bad_extension
nginx_etalon/html/YoupiBanane/: youpi.bad_extension
nginx_etalon/nginx/: nginx.conf
python_tests/: README.md  locustfile.py  requirments.txt
python_tests/test_put_requests/: WEBSERV.CONF  test_put_requests.py
request_handlers/: AbstractRequestHandler.hpp  ContentLengthHandler.hpp  HeaderHandler.hpp  ParseRequestHandler.hpp  Request.cpp  Request.hpp
request_handlers/tests/: strtoul_base_tests.cpp
requests_test/: test_servers.cpp
response/: Response.cpp  Response.hpp
response/autoindex_handling/: Index of _.html  autoindex_handling.cpp  autoindex_handling.hpp  test_autoindex.html  test_dir.txt
response/tests/: ultostr_base_tests.cpp
tests/: curl_scripts.sh  telnet_test.sh
tests/python_tests/: README.md  requirments.txt
tests/python_tests/test_put_requests/: WEBSERV.CONF  test_put_requests.py
tests/python_tests/ui_tests/: WEBSERV.CONF  conftest.py  test_checklist.py
tests/python_tests/ui_tests/default_folder/: index_8080.html  index_8080_first.html  index_8080_second.html  index_8081.html
tests/test_configs/: 1.conf  2.conf  CMakeLists.txt  fixtures.hpp
tests/test_configs/contexts/: test_location.cpp
tests/test_configs/directives/: test_alias.cpp  test_autoindex.cpp  test_client_max_body_size.cpp  test_error_page.cpp  test_index.cpp  test_limit_except.cpp  test_listen.cpp  test_root.cpp  test_server_name.cpp  tmp_config.conf
utils/: utils.cpp  utils.hpp
utils/cpp_libft/: atoi.cpp  get_next_word.cpp  is_correct_ip_octet.cpp  isdigit.cpp  isspace.cpp  itoa_base.cpp  libft.hpp  percent_decode.cpp  stl_containers_operator_overloading.cpp  stoll_base.cpp  string_to_lower.cpp  string_to_upper.cpp  strtoul_base.cpp  tolower.cpp  toupper.cpp  ultostr_base.cpp  unsigned_number_len.cpp
utils/custom_structures/: Pair.hpp
utils/get_next_line/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
utils/tests/cpp_libft/: test_stoll_base.cpp
